--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	-->
 	
 	<script src="phonegap.js"></script>
+  <script src="PushNotification.js"></script>
 	
 	<!-- vendor libraries -->
     <script src="javascripts/vendor/jqtouch/zepto.jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
